# pairs-trading

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-app.txt  sitemap.xml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  docs.yml  mirror-hf.yml  release.yml
.streamlit/: config.toml
app/: cache.py  state.py  streamlit_app.py
app/components/: disclaimer.py  footer.py  header.py  methodology.py
app/pages/: 01_pair_finder.py  02_spread_explorer.py  03_backtest.py  04_portfolio.py
app/plots/: equity_drawdown.py  gantt_walkforward.py  is_vs_oos_bars.py  pair_contribution.py  pair_scan_table.py  price_overlay.py  spread_zscore.py
deploy/hf-spaces/: Dockerfile  README.md
docs/: getting-started.md  index.md  reproducibility.md
getting-started/: index.html
hooks/: macros.py
profiles/: large_cap_optimistic.yaml  large_cap_realistic.yaml  mid_cap_realistic.yaml  small_cap_conservative.yaml
reproducibility/: index.html
scripts/: check_reproducibility.py  make_manifest.py
search/: search_index.json
src/pairs/: __init__.py  _config.py  _exceptions.py  _logging.py  _manifest.py  _rng.py  _version.py
src/pairs/backtest/: __init__.py  _metrics.py  accounting.py  borrow.py  costs.py  engine.py  profiles.py  results.py  sensitivity.py  slippage.py
src/pairs/cointegration/: __init__.py  adf.py  bootstrap.py  engle_granger.py  johansen.py  kpss.py  pipeline.py  results.py
src/pairs/cointegration/_internal/: align.py
src/pairs/data/: __init__.py  _yfinance_adapter.py  actions.py  cache.py  calendar.py  loader.py  manifest.py  universe.py
src/pairs/data/data/: __init__.py
src/pairs/data/data/blacklist/: structural_breaks.yaml
src/pairs/data/data/universes/: __init__.py  curated_25_v1.yaml  xlk_v1.yaml
src/pairs/data_providers/: __init__.py  exceptions.py  factory.py  polygon.py  sp500_universe.py  yfinance.py
src/pairs/evaluation/: __init__.py  _purge.py  bootstrap_ci.py  cpcv.py  dsr.py  hac.py  memmel.py  pbo.py  protocol.py  results.py  spa.py  splits.py  trial_log.py  walk_forward.py
src/pairs/portfolio/: __init__.py  allocators.py  caps.py  correlation.py  lifecycle.py  overlay.py  results.py  runner.py
src/pairs/selection/: __init__.py  _hurst.py  candidates.py  effective_n.py  mtc.py  pre_screen.py  results.py  romano_wolf.py  screen.py
src/pairs/spread/: __init__.py  diagnostics.py  half_life.py  hedge.py  kalman.py  ou.py  results.py  spread.py  zscore.py
src/pairs/strategy/: __init__.py  results.py  rules.py  signals.py
stylesheets/: extra.css
tests/: conftest.py  test_smoke.py
tests/app/: test_cache_adapter.py  test_cache_integration.py  test_plots_render.py
tests/backtest/: conftest.py  test_costs.py  test_decomposition.py  test_engine_basics.py  test_engine_lookahead.py  test_kill_switch.py  test_profiles.py  test_sensitivity.py
tests/cointegration/: conftest.py  test_adf.py  test_audit_regressions.py  test_bootstrap.py  test_edge_cases.py  test_engle_granger.py  test_johansen.py  test_kpss.py  test_pipeline.py  test_properties.py
tests/data/: conftest.py  test_actions.py  test_cache.py  test_calendar.py  test_loader.py  test_manifest.py  test_universe.py  test_yfinance_adapter.py
tests/data_providers/: test_factory.py  test_polygon_provider.py  test_sp500_universe.py  test_yfinance_provider.py
tests/evaluation/: conftest.py  test_bootstrap_ci.py  test_cpcv.py  test_dsr.py  test_hac.py  test_memmel.py  test_pbo.py  test_protocol_end_to_end.py  test_purge.py  test_spa.py  test_splits.py  test_trial_log.py  test_walk_forward.py
tests/integration/: conftest.py
tests/portfolio/: conftest.py  test_allocators.py  test_caps.py  test_correlation.py  test_lifecycle.py  test_overlay.py  test_runner.py  test_smoke.py
tests/property/: conftest.py
tests/selection/: conftest.py  test_candidates.py  test_effective_n.py  test_hurst.py  test_mtc.py  test_pre_screen.py  test_results.py  test_romano_wolf.py  test_screen.py
tests/spread/: conftest.py  test_diagnostics.py  test_half_life.py  test_hedge.py  test_kalman.py  test_ou.py  test_results.py  test_smoke.py  test_spread.py  test_zscore.py
tests/strategy/: conftest.py  test_rules.py  test_signals.py
tests/unit/: conftest.py  test_config.py  test_exceptions.py  test_logging.py  test_manifest.py  test_rng.py
